# flowgen

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.MD  config.example.yaml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: build.yml  docs-ci.yml  docs-release.yaml  flowgen-release.yml  helm-release.yml  lint.yml  release.yml  security.yml  test.yml
charts/: README.md
charts/flowgen/: Chart.yaml  values.yaml
components/flowgen/: Cargo.toml
components/google/: build.rs
components/salesforce/: Cargo.toml  build.rs
crates/core/: Cargo.toml
crates/deltalake/: Cargo.toml
crates/deltalake/src/: client.rs  config.rs  lib.rs  publisher.rs  writer.rs
crates/file/: Cargo.toml
crates/http/: Cargo.toml
crates/nats/: Cargo.toml
crates/salesforce/: Cargo.toml
deploy/: config.yaml  flowgen.yaml
deploy/flows/: account_sf_query_job_creator.json  account_sf_query_job_retriever.json  account_sf_query_job_writer.json
docker/: Dockerfile
docs/: .env.example  package-lock.json  package.json  svelte.config.js
docs/src/: app.css  app.html
docs/static/: _headers
examples/: Cargo.toml  README.md  csv_deltalake_writer.json  parallel_instances.yaml  salesforce_pubsub_nats.json  scheduled_file_reader.json
examples/ai/: rag_resource_completion.yaml  resource_prompt_completion.yaml
examples/cloudflare/: cloudflare_email_forwarder_listener.yaml  cloudflare_email_forwarder_writer.yaml  cloudflare_email_forwarder_writer_resource.yaml
examples/data/: orders.csv  payment_types.csv  sample.in.csv
examples/event-store/: Cargo.toml
examples/gcp/: bigquery_batch_upsert_advanced.yaml  bigquery_batch_upsert_basic.yaml  bigquery_job_cancel.yaml  bigquery_job_delete.yaml  bigquery_job_load.yaml  bigquery_job_monitor.yaml  bigquery_query_advanced.yaml  bigquery_query_basic.yaml  bigquery_query_parameterized.yaml  bigquery_storage_read_advanced.yaml  bigquery_storage_read_basic.yaml  bigquery_storage_write_advanced.yaml  bigquery_storage_write_basic.yaml
examples/git/: system_sync_flows.yaml  system_sync_resources.yaml
flowgen/: Cargo.toml
flowgen-server/: Cargo.toml
flowgen-server/src/: config.rs  discover.rs  git.rs  main.rs  sync.rs  validate.rs
flowgen-worker/ai/: Cargo.toml
flowgen-worker/ai-agent/: Cargo.toml
flowgen-worker/ai-agent/src/: agent.rs  lib.rs
flowgen-worker/ai-agent/src/completion/: config.rs  processor.rs
flowgen-worker/ai-agent/src/llm_proxy/: config.rs  mod.rs  processor.rs  types.rs
flowgen-worker/ai/src/: lib.rs
flowgen-worker/ai/src/completion/: config.rs  mod.rs
flowgen-worker/app/: Cargo.toml
flowgen-worker/app/src/: app.rs  config.rs  flow.rs  lib.rs  main.rs
flowgen-worker/gcp/: Cargo.toml
flowgen-worker/gcp/src/: lib.rs
flowgen-worker/gcp/src/bigquery/: config.rs  job.rs  query.rs  storage_read.rs  storage_write.rs
flowgen-worker/mongo/: Cargo.toml
flowgen-worker/mongo/src/: change_stream.rs  client.rs  config.rs  lib.rs  message.rs  reader.rs  writer.rs
flowgen/ai-agent/: Cargo.toml
flowgen/ai-agent/src/: agent.rs  lib.rs
flowgen/ai-agent/src/ai_gateway/: config.rs  llm_proxy.rs  processor.rs  server.rs
flowgen/ai-agent/src/completion/: config.rs  passthrough.rs  processor.rs
flowgen/app/: Cargo.toml
flowgen/app/src/: app.rs  config.rs  flow.rs  lib.rs  main.rs  reconciler.rs  watcher.rs
flowgen/core/: Cargo.toml
flowgen/core/src/: buffer.rs  cache.rs  client.rs  client_registry.rs  config.rs  credentials.rs  event.rs  http_server.rs  lib.rs  mcp_server.rs  peer.rs  registry.rs  resource.rs  retry.rs  service.rs  telemetry.rs  validate.rs
flowgen/core/src/auth/: jwt.rs  oidc.rs
flowgen/core/src/cache/: memory.rs
flowgen/core/src/mcp/: registry.rs
flowgen/core/src/nsjail/: sandbox.rs
flowgen/core/src/task/: context.rs  manager.rs  runner.rs
flowgen/core/src/task/buffer/: config.rs  processor.rs
flowgen/core/src/task/convert/: processor.rs
flowgen/core/src/task/generate/: config.rs  subscriber.rs
flowgen/core/src/task/iterate/: processor.rs
flowgen/core/src/task/log/: config.rs  processor.rs
flowgen/core/src/task/script/: config.rs  processor.rs
flowgen/gcp/: Cargo.toml
flowgen/gcp/src/: lib.rs
flowgen/gcp/src/bigquery/: config.rs  job.rs  query.rs  storage_read.rs  storage_write.rs
flowgen/git/: Cargo.toml
flowgen/git/src/: config.rs  lib.rs  processor.rs
flowgen/git/src/sync/: config.rs  processor.rs
flowgen/html/: Cargo.toml
flowgen/html/src/: lib.rs
flowgen/html/src/scrape/: processor.rs
flowgen/http/: Cargo.toml
flowgen/http/src/: config.rs  endpoint.rs  lib.rs  request.rs  server.rs  webhook.rs
flowgen/mcp/: Cargo.toml
flowgen/mcp/src/: completion.rs  lib.rs  processor.rs  server.rs
flowgen/mcp/src/prompt/: config.rs  mod.rs  processor.rs
flowgen/mcp/src/resource/: config.rs  mod.rs  processor.rs
flowgen/mongo/: Cargo.toml
flowgen/mongo/src/: change_stream.rs  client.rs  config.rs  lib.rs  message.rs  reader.rs  writer.rs
flowgen/mssql/: Cargo.toml
flowgen/mssql/src/: config.rs  query.rs
flowgen/nats/: Cargo.toml
flowgen/nats/src/: cache.rs  client.rs  lib.rs
flowgen/nats/src/jetstream/: config.rs  kv_store.rs  message.rs  publisher.rs  stream.rs  subscriber.rs
flowgen/object-store/: Cargo.toml
flowgen/object-store/src/: client.rs  config.rs  lib.rs  list.rs  move.rs  read.rs  write.rs
flowgen/oci/: Cargo.toml
flowgen/oci/src/: lib.rs
flowgen/oci/src/sync/: config.rs  mod.rs  processor.rs
flowgen/oci/tests/: sync_integration.rs
flowgen/salesforce/: Cargo.toml
flowgen/salesforce/src/: lib.rs
flowgen/salesforce/src/bulkapi/: config.rs  query_job.rs
flowgen/salesforce/src/pubsubapi/: config.rs  publisher.rs  subscriber.rs
flowgen/salesforce/src/restapi/: composite.rs  config.rs  search.rs  sobject.rs
flowgen/salesforce/src/soapapi/: config.rs  merge.rs
flowgen/salesforce/src/toolingapi/: mod.rs  processor.rs
flowgen/src/: app.rs  config.rs  core.rs  flow.rs  main.rs  service.rs  subscriber.rs
scripts/: build.sh
(+396 files in other folders)
