[workspace]
members = ["flowgen-worker/app"]
resolver = "2"
exclude = [".cargo"]

[workspace.package]
version = "0.38.0"
authors = ["CONNVE"]
license = "MPL-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
salesforce_core = { git = "https://github.com/connve-labs/salesforce-rs" }
salesforce_pubsub_v1 = { git = "https://github.com/connve-labs/salesforce-rs" }
google-cloud-bigquery = { package = "gcloud-bigquery", version = "1.5" }
gcloud-auth = { version = "1.2" }
gcloud-gax = { version = "1.3" }
gcloud-googleapis = { version = "1.3" }
google-cloud-gax = { version = "0.21" }
object_store = { version = "0.12", features = ["gcp", "fs"] }
bytes = { version = "1.10" }
handlebars = { version = "6.3" }
arrow = { version = "56.1" }
arrow-json = { version = "56.1" }
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.48" }
tokio-stream = { version = "0.1" }
thiserror = { version = "1.0" }
futures-util = { version = "0.3" }
futures = { version = "0.3" }
reqwest = { version = "0.12", features = ["json"] }
url = { version = "2.5" }
async-nats = { version = "0.35" }
bincode = { version = "1.3" }
tonic = { version = "0.14", features = ["tls-native-roots"] }
config = { version = "0.15" }
serde_avro_fast = { version = "2.0" }
oauth2 = { version = "5.0" }
prost = { version = "0.13" }
prost-types = { version = "0.14" }
glob = { version = "0.3" }
apache-avro = { version = "0.19" }
regex = { version = "1.12" }
axum = { version = "0.8" }
base64 = { version = "0.22" }
async-trait = { version = "0.1" }
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
rhai = { version = "1.20", features = ["sync", "serde"] }
tokio-retry = { version = "0.3" }
humantime = { version = "2.1" }
humantime-serde = { version = "1.1" }
croner = { version = "3.0.1" }
