[workspace]
members = ["flowgen-worker/app"]
resolver = "2"
exclude = [".cargo"]

[workspace.package]
version = "0.66.0"
authors = ["CONNVE"]
license = "MPL-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
apache-avro = { version = "0.19" }
arrow = { version = "56.1" }
arrow-json = { version = "56.1" }
async-nats = { version = "0.46" }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
base64 = { version = "0.22" }
bb8 = { version = "0.9" }
bb8-tiberius = { version = "0.16" }
bincode = { version = "1.3" }
bytes = { version = "1.11.1" }
chrono = { version = "0.4" }
config = { version = "0.15" }
croner = { version = "3.0.1" }
dashmap = { version = "6.1" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
gcloud-auth = { git = "https://github.com/connve/google-cloud-rust" }
gcloud-gax = { git = "https://github.com/connve/google-cloud-rust" }
gcloud-googleapis = { git = "https://github.com/connve/google-cloud-rust" }
glob = { version = "0.3" }
google-cloud-bigquery = { package = "gcloud-bigquery", git = "https://github.com/connve/google-cloud-rust" }
google-cloud-gax = { version = "0.21" }
handlebars = { version = "6.3" }
humantime = { version = "2.1" }
humantime-serde = { version = "1.1" }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.99", features = ["runtime", "derive"] }
# Pinned to avoid 0.2.17 which has a non-exhaustive match compile error on recent Rust toolchains.
native-tls = { version = "=0.2.16" }
oauth2 = { version = "5.0" }
object_store = { version = "0.12", features = ["gcp", "fs"] }
opentelemetry = { version = "0.27" }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
parquet = { version = "56.1" }
prost = { version = "0.13" }
prost-types = { version = "0.14" }
regex = { version = "1.12" }
reqwest = { version = "0.12", features = ["json"] }
rhai = { version = "1.20", features = ["sync", "serde"] }
salesforce_core = { git = "https://github.com/connve/salesforce-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_avro_fast = { version = "2.0" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
thiserror = { version = "1.0" }
tiberius = { version = "0.12" }
tokio = { version = "1.48", features = ["rt-multi-thread"] }
tokio-retry = { package = "tokio-retry2", version = "0.6", features = [
    "jitter",
] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["compat"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.28" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
