[package]
name = "flowgen_server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "flowgen_server"
path = "src/main.rs"

[dependencies]
flowgen_core = { path = "../flowgen-worker/core" }
flowgen_nats = { path = "../flowgen-worker/nats" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
walkdir = { workspace = true }
atty = { workspace = true }
rustls = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
