[package]
name = "flowgen"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "flowgen"
path = "src/main.rs"
[dependencies]
flowgen_core = { path = "../flowgen-worker/core" }
flowgen_http = { path = "../flowgen-worker/http" }
flowgen_salesforce = { path = "../flowgen-worker/salesforce" }
flowgen_nats = { path = "../flowgen-worker/nats" }
flowgen_object_store = { path = "../flowgen-worker/object-store" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
config = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
[dev-dependencies]
tempfile = "3.8"
