
[package]
name = "flowgen_ai_agent"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_ai_agent"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
futures-util = { workspace = true }
flowgen_core = { path = "../core" }
tokio = { workspace = true, features = ["fs", "process", "io-util"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
rig-core = { workspace = true }
rig-vertexai = { workspace = true }
rmcp = { workspace = true }
tokio-retry = { workspace = true }
handlebars = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
