[package]
name = "flowgen_worker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "flowgen_worker"
path = "src/main.rs"

[dependencies]
flowgen_core = { path = "../core" }
flowgen_http = { path = "../http" }
flowgen_salesforce = { path = "../salesforce" }
flowgen_mongo = { path = "../mongo" }
flowgen_nats = { path = "../nats" }
flowgen_object_store = { path = "../object-store" }
flowgen_gcp = { path = "../gcp" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
config = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
[dev-dependencies]
tempfile = "3.8"
