[package]
name = "flowgen_gcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_gcp"
path = "src/lib.rs"

[dependencies]
flowgen_core = { path = "../core" }
google-cloud-bigquery = { workspace = true }
google-cloud-gax = { workspace = true }
gcloud-auth = { workspace = true }
gcloud-gax = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio-retry = { workspace = true }
humantime-serde = { workspace = true }
base64 = { workspace = true }
arrow = { workspace = true }
arrow-json = { workspace = true }
chrono = { workspace = true }
