[package]
name = "flowgen"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "flowgen"
path = "src/main.rs"

[dependencies]
flowgen_core = { path = "../core" }
flowgen_http = { path = "../http" }
flowgen_html = { path = "../html" }
flowgen_salesforce = { path = "../salesforce" }
flowgen_nats = { path = "../nats" }
flowgen_object_store = { path = "../object-store" }
flowgen_gcp = { path = "../gcp" }
flowgen_mssql = { path = "../mssql" }
flowgen_ai_agent = { path = "../ai-agent" }
flowgen_mcp = { path = "../mcp" }
flowgen_git = { path = "../git" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
config = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
native-tls = { workspace = true }
humantime-serde = { workspace = true }
rustls = { workspace = true }
atty = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
