[package]
name = "flowgen_git"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_git"
path = "src/lib.rs"

[dependencies]
flowgen_core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
async-trait = { workspace = true }
tokio-retry = { workspace = true }
gix = { workspace = true }
