
[package]
name = "flowgen_html"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_html"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
flowgen_core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio-retry = { workspace = true }
scraper = { workspace = true }
futures-util = { workspace = true }
