[package]
name = "flowgen_mssql"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_mssql"
path = "src/lib.rs"

[dependencies]
flowgen_core = { path = "../core" }
tokio = { workspace = true }
tiberius = { workspace = true }
bb8 = { workspace = true }
bb8-tiberius = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
async-trait = { workspace = true }
tokio-retry = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
